--- a/package.json
+++ b/package.json
@@ -6,10 +6,14 @@
   "dependencies": {
     "archiver": "^0.8.1",
     "async": "^0.9.0",
+    "body-parser": "^1.0.0",
     "colors": "^0.6.2",
     "express": "~3.5.1",
     "gridfs-stream": "^0.5.1",
+    "method-override": "^1.0.0",
     "mongodb": "^1.4.5",
+    "morgan": "^1.0.0",
+    "multer": "0.0.5",
     "node-uuid": "^1.4.1",
     "tar-stream": "^0.4.2"
   },
