--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "async": "^0.9.0",
     "body-parser": "^1.0.0",
     "colors": "^0.6.2",
-    "express": "~3.5.1",
+    "express": "^4.4.1",
     "gridfs-stream": "^0.5.1",
     "method-override": "^1.0.0",
     "mongodb": "^1.4.5",
