--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "morgan": "^1.0.0",
     "multer": "0.0.5",
     "node-uuid": "^1.4.1",
+    "rimraf": "^2.2.8",
     "tar-stream": "^0.4.2"
   },
   "devDependencies": {},
